--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -111,24 +111,34 @@
 			 <li>province or territory of residence</li>
 			 <li>earned working income</li>
 			 <li>adjusted family net income</li>
-			 <li><ahref="eligible.html#whoaneligibledependant is">eligible dependant</a></li>
+			 <li><a href="eligible.html#whoaneligibledependant is">eligible dependant</a></li>
 			 <li>eligibility for the disability tax credit</li>
 		 </ul>
 		 
-		 <h2 id="h-4">Life changes that affect the ACWB</h2>
-            <p>The only life event changes that will affect the ACWB are death, incarceration, or emigration.</p>
-		 <p>If there is another change to your situation (like a change in marital status, eligible dependent(s) or a move) it will be reflected in your payments after you submit your next tax and benefit return.</p>
+		 <h2 id="h-4">How to calculate the ACWB payment amount</h2>
+            <p>The Advanced Canada workers benefit (ACWB) will always be equal to 50% of your CWB that was calculated on your income tax and benefit return.</p>
+<p>You can estimate your ACWB payments by using the child and family benefit calculator. Note: you must enter the information based on your situation as of December 31 probided on your income tax and benefit return.</p>
+		 <p>A change in the eligibility which occurs during a quarter will not impact the ACWB payment amount for the current quarter.</p>
+		
+		 		 <h2 id="h-5">How the CRA will determine the recipient for married or common-law spouses</h2>
+		 <p>Only one spouse will receive the ACWB.</p>
+
 		 
-		 <h3>Circumstances that change your eligibility for the ACWB</h3>
-		 <p>You are not eligible for any remaining ACWB payments for the benefit year if you:</p>
-		   <ul class="fa-ul">
-<li><span class="fas fa-times text-danger fa-li"></span>are incarcerated for a period of 90 consecutive days or more</li>
-			     
-			   <li><span class="fas fa-times text-danger fa-li"></span>emigrated from Canada</li>
-		 </ul>
-		 <p>However, you remain eligible for any payment periods prior to the event.</p>
-		 <h3>Deceased individuals are not eligible for the ACWB</h3>
-		 <p>An individual deceased prior to July 1 of the benefit year is not eligible to receive the ACWB.</p>
+		 <h3>When neither spouse is entitled to a disability supplement</h3>
+		 <p>For couples, the ACWB basic amount is sent to the spouse with the higher working income. If both spouses have the same working income, the ACWB basic amount is paid to the first filer.</p>
+		 
+		 <h3>When one or both spouses is entitled to receive the disability supplement</h3>
+		 <p>If you and your spouse are both eligible for the ACWB and one of you is also eligible for the disability tax credit, the person with the disability will receive the basic amount for the family and their disability supplement payment.</p>
+		 <p>If you and your spouse are both eligible for the ACWB and the disability tax credit, only one of you will receive the basic amount for the family. However, each of you will receive your own disability supplement.</p>
+		 
+		 		 		 <h2 id="h-6">Advanced Canada workers benefit payment dates</h2>
+		 <p>The ACWB is issued in 3 quarterly payments on the 12 of July, October, and January.</p>
+		 <p>In the first year, the first quarterly payment will be issued on July 28, 2023. The two remaining quarterly payments will be issued on October 12, 2023 and January 12, 2024.</p>
+		 <p>When the issuance date falls on a Saturday, a Sunday, or a federal statutory holiday, the payment will be made on the last business day prior to the issuance date.</p>
+		 <p>If you did not get your payment on the expected date, please wait 10 working days before contacting the CRA.</p>
+		 <p>To view your personal benefit payment information, go to My Account or the MyBenefits CRA mobile app. You can also subscribe to the benefit and credit payment dates reminders elecronic mailing list to receive payment date reminders.</p>
+		 
+
 		 
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
