--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -463,6 +463,12 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 
  <p>Report on a <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>&nbsp;the annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income under the provisions of section&nbsp;12.2 of the <abbr title="Income Tax Act">ITA</abbr>.</p>
 <p>Report annuity payments to a non-resident on an <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</p>
+
+ <h4>Special situations</h4>
+<dl class="dl-horizontal">
+<dt>DPSP payments</dt>
+<dd>Report instalment or annuity payments you made under DPSP using code 24 <strong>and</strong> <a href="#cd115">code 115</a>. </dd>
+</dl>
  
 <p>Learn more on the tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/annuities.html">Annuity payments </a> </p>
 
@@ -659,7 +665,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </li>
 <li class="code-num">
  <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments</summary> 
-  <p id="cd115">Learn more: Box 024 – Annuities</p> 
+  <p id="cd115">Report instalment or annuity payments you made under DPSP using code 115 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
  </details> 
 </li>
 <li class="code-num">
