--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -77,8 +77,8 @@
 	
 	<dl class="dl-horizontal">
 <dt class="h3 mrgn-tp-0">Compliment</dt> <dd><p>Submit a positive experience you had with the CRA</p>
-</dd> <dt class="h3 mrgn-tp-0">Suggestion</dt> <dd><p>Suggest an improvement for the CRA</p>
-</dd> <dt class="h3 mrgn-tp-0">Complaint</dt> <dd><p>Submit a complaint about the CRA</p>
+</dd> <dt class="h3 mrgn-tp-0">Suggestion</dt> <dd><p>Give your idea on how to improve the CRA</p>
+</dd> <dt class="h3 mrgn-tp-0">Complaint</dt> <dd><p>Tell us about a problem you had with the CRA</p>
 </dd></dl>
 	
 	<!--<div class="cnjnctn-type-or">
