--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -73,7 +73,7 @@
         <div class="clear"></div>
 
 <h2 id="toc0">Types of feedback</h2>
-<p>There are 3 type of feedback you can give the CRA.</p>
+<p>There are 3 types of feedback you can give the CRA.</p>
 	
 	<dl class="dl-horizontal">
 <dt class="h3 mrgn-tp-0">Compliment</dt> <dd><p>Submit a positive experience you had with the CRA</p>
