--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -116,12 +116,24 @@
 		<li>Fillable PDF form RC193<br>
 			<details>
 <summary>Ways to submit your PDF form to the CRA</summary>
-    <ul>
-		<li>Online dynamic form</li>	
-		<li>Online CRA account - (My account, My Bus, Rep a client)</li>
-		<li>By fax</li>
-		<li>By mail</li>
-	</ul>
+   <h4>Online with 1 of the CRA sign in services</h4>
+
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html">My Account</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My Business Account</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></li>
+</ul>
+<h4>By fax</h4>
+<ul>
+<li><span class="nowrap">1-866-388-7371</span> from Canada or the United States.</li>
+<li><span class="nowrap">1-819-536-0701</span> from outside Canada and the United States.</li>
+</ul>
+<h4>By mail</h4>
+<p>CRA Service Feedback<br>
+National Intake Centre<br>
+4695 Shawinigan-Sud Boulevard<br>
+Shawinigan QC&nbsp; G9P 5H9<br>
+CANADA</p>
  </details>
 
 		</li>
