--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -110,8 +110,38 @@
 	</ul>
 	
 	<h3>Methods to use</h3>
-			
-	<ul>
+	<div class="cnjnctn-type-or cnjnctn-xs">
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">Service Feedback online form<span class="wb-inv">: Option 1 of X</span></h4>
+<p>Completed and submit your feedback with the  <a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/en">RC193 – Service Feedback online form</a></p>
+</div>
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">PDF form version<span class="wb-inv">: Option 2 of X</span></h4>
+<p>Fill out your form on with the  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc193.html">PDF version of the form</a> </p>
+	<details>
+<summary>Ways to submit your PDF form to the CRA</summary>
+   <h4>Online with 1 of the CRA sign in services</h4>
+
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html">My Account</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My Business Account</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></li>
+</ul>
+<h4>By fax</h4>
+<ul>
+<li><span class="nowrap">1-866-388-7371</span> from Canada or the United States.</li>
+<li><span class="nowrap">1-819-536-0701</span> from outside Canada and the United States.</li>
+</ul>
+<h4>By mail</h4>
+<p>CRA Service Feedback<br>
+National Intake Centre<br>
+4695 Shawinigan-Sud Boulevard<br>
+Shawinigan QC&nbsp; G9P 5H9<br>
+CANADA</p>
+ </details>
+</div></div>
+	
+	<!--<ul>
 		<li>Online dynamic form</li>	
 		<li>Fillable PDF form RC193<br>
 			<details>
@@ -137,7 +167,7 @@ CANADA</p>
  </details>
 
 		</li>
-	</ul>
+	</ul>-->
 			
 		
 	<h3>After you submit your feedback</h3>
