--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -110,13 +110,14 @@
 	</ul>
 	
 	<h3>Methods to use</h3>
+	<div class="col-md-9">
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">Service Feedback online form<span class="wb-inv">: Option 1 of X</span></h4>
+<h4 class="mrgn-tp-sm text-muted">Service Feedback online form<span class="wb-inv">: Option 1 of 2</span></h4>
 <p>Completed and submit your feedback with the  <a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/en">RC193 – Service Feedback online form</a></p>
 </div>
 <div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">PDF form version<span class="wb-inv">: Option 2 of X</span></h4>
+<h4 class="mrgn-tp-sm text-muted">PDF form version<span class="wb-inv">: Option 2 of 2</span></h4>
 <p>Fill out your form on with the  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc193.html">PDF version of the form</a> </p>
 	<details>
 <summary>Ways to submit your PDF form to the CRA</summary>
@@ -139,7 +140,7 @@ National Intake Centre<br>
 Shawinigan QC&nbsp; G9P 5H9<br>
 CANADA</p>
  </details>
-</div></div>
+		</div></div></div>
 	
 	<!--<ul>
 		<li>Online dynamic form</li>	
