--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -113,12 +113,12 @@
 	<div class="col-md-9">
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">Service Feedback online form<span class="wb-inv">: Option 1 of 2</span></h4>
-<p>Completed and submit your feedback with the  <a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/en">RC193 – Service Feedback online form</a></p>
+<h4 class="mrgn-tp-sm text-muted">Online form <span class="wb-inv">: Option 1 of 2</span></h4>
+<p>Complete and submit your feedback with the  <a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/en">Online service feedback application form - RC193</a></p>
 </div>
 <div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">PDF form version<span class="wb-inv">: Option 2 of 2</span></h4>
-<p>Fill out your form on with the  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc193.html">PDF version of the form</a> </p>
+<h4 class="mrgn-tp-sm text-muted">PDF form <span class="wb-inv">: Option 2 of 2</span></h4>
+<p>Fill out your form on the  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc193.html">PDF version of the form - RC193</a> </p>
 	<details>
 <summary>Ways to submit your PDF form to the CRA</summary>
    <h4>Online with 1 of the CRA sign in services</h4>
