--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -172,7 +172,7 @@ CANADA</p>
 			
 		
 	<h3>After you submit your feedback</h3>
-	<p>Your feedback will be forwarded to the:</p>
+	<p>Once we receive your feedback it will be forwarded to the:</p>
 		<ul>
 			<li>Responsible manager and/or employee for recognition</li>
 			<li>Appropriate office or program area for consideration / review </li>
