--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -170,7 +170,7 @@ CANADA</p>
 		</li>
 	</ul>-->
 			
-		
+	 <div class="clear"></div>	
 	<h3>After you submit your feedback</h3>
 	<p>Once we receive your feedback it will be forwarded to the:</p>
 		<ul>
