--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -177,9 +177,9 @@ CANADA</p>
 			<li>Responsible manager and/or employee for recognition</li>
 			<li>Appropriate office or program area for consideration / review </li>
 	</ul>
-	<p>A service feedback officer may contact you by phone or by mail as part of the review process. Time to resolve a complaint will depend on the complexity of the request. </p> 
+	<p>A service feedback officer may contact you by phone or by mail as part of the review process.  </p> 
 		<h3><span class="far fa-clock"></span> Feedback processing times</h3>
-		<p>The CRA service standard to resolve your feedback is within 30 business days after receiving it.</p>
+		<p>The CRA service standard to resolve your feedback is within 30 business days after receiving it. Time to resolve a complaint will depend on the complexity of the request.</p>
 		
 	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check the CRA processing times</a></p>
 	
