--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -136,7 +136,7 @@
 		 <p>In the first year, the first quarterly payment will be issued on July 28, 2023. The two remaining quarterly payments will be issued on October 12, 2023 and January 12, 2024.</p>
 		 <p>When the issuance date falls on a Saturday, a Sunday, or a federal statutory holiday, the payment will be made on the last business day prior to the issuance date.</p>
 		 <p>If you did not get your payment on the expected date, please wait 10 working days before contacting the CRA.</p>
-		 <p>To view your personal benefit payment information, go to My Account or the MyBenefits CRA mobile app. You can also subscribe to the benefit and credit payment dates reminders elecronic mailing list to receive payment date reminders.</p>
+		 <p>To view your personal benefit payment information, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html">My Account</a> or the <a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-mobile-apps.html">MyBenefits CRA mobile app</a>. You can also subscribe to the <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/payment-dates-reminder.html">benefit and credit payment dates reminders</a> elecronic mailing list to receive payment date reminders.</p>
 		 
 
 		 
