--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -103,13 +103,16 @@
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
 	<h2 id="toc1">Feedback about service you received</h2>
 <p>You have several ways to provide feedback on service you received from the CRA:</p>
-	<ul>
+	<!--<ul>
 		<li>By phone - Call the CRA</li>	
 		<li>By form - Complete the form</li>
 		<li>By contacting the Taxpayers' Ombudsperson</li>
-	</ul>
+	</ul>-->
+<h3>Talk to us first</h3>
+	<p>You can try to resolve your concerns with the CRA employee you have been dealing with or call the telephone number provided in the CRA's correspondence. If you do not have the contact information, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Contact the Canada Revenue Agency</a>. If you still disagree with the way your concerns were addressed, you can ask to discuss the matter with the employee's supervisor. If you are still not satisfied, you can file a service complaint.</p>
 	
-	<h3>Methods to use</h3>
+<h3>File a service complaint using 1 of these methods</h3>
+<h3>Methods to use</h3>
 	<div class="col-md-9">
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
@@ -140,7 +143,16 @@ National Intake Centre<br>
 Shawinigan QC&nbsp; G9P 5H9<br>
 CANADA</p>
  </details>
-		</div></div></div>
+		</div></div></div>	
+	
+<h3>Contact the Office of the Taxpayers' Ombudsperson</h3>
+	<p>If you are still not satisfied with how the CRA handled your service complaint, you can contact the <a href="http://www.oto-boc.gc.ca/menu-eng.html" target="_blank">Office of the Taxpayers' Ombudsperson</a>.</p>
+<p>Generally, the Office of the Taxpayers' Ombudsperson will not review a service complaint until the CRA has finished its review.</p>
+
+
+
+	
+	
 	
 	<!--<ul>
 		<li>Online dynamic form</li>	
