--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -68,7 +68,7 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">How much you can get</h1>
-            <p>The amount you can expect to receive for the Canada workers benefit (CWB) depends on <a href="/en/revenue-agency/services/child-family-benefits/canada-workers-benefit/net-income-not-eligible.html">your income and your province or territory of residence</a>.</p>
+            <p>The amount you can expect to receive for the Canada workers benefit (CWB) depends on <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-workers-benefit/net-income-not-eligible.html">your income and your province or territory of residence</a>.</p>
             <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">The maximum basic CWB</a></li>
