--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -103,15 +103,53 @@
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
 	<h2 id="toc1">Feedback about service you received</h2>
 <p>You have several ways to provide feedback on service you received from the CRA:</p>
-	<!--<ul>
-		<li>By phone - Call the CRA</li>	
-		<li>By form - Complete the form</li>
-		<li>By contacting the Taxpayers' Ombudsperson</li>
-	</ul>-->
-<h3>Talk to us first</h3>
+	
+	<ol class="lst-stps">
+<li><h4>Talk to us first</h4>
+<p>You can try to resolve your concerns with the CRA employee you have been dealing with or call the telephone number provided in the CRA's correspondence. If you do not have the contact information, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Contact the Canada Revenue Agency</a>. If you still disagree with the way your concerns were addressed, you can ask to discuss the matter with the employee's supervisor. If you are still not satisfied, you can file a service complaint.</p>
+</li>
+<li><h4>File a service feedback using 1 of these methods</h4>
+<div class="col-md-9">
+	<div class="cnjnctn-type-or cnjnctn-xs">
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">Online form <span class="wb-inv">: Option 1 of 2</span></h4>
+<p>Complete and submit your feedback with the  <a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/en">Online service feedback application form - RC193</a></p>
+</div>
+<div class="cnjnctn-col">
+<h4 class="mrgn-tp-sm text-muted">PDF form <span class="wb-inv">: Option 2 of 2</span></h4>
+<p>Fill out your form on the  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc193.html">PDF version of the form - RC193</a> </p>
+	<details>
+<summary>Ways to submit your PDF form to the CRA</summary>
+   <h4>Online with 1 of the CRA sign in services</h4>
+
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html">My Account</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My Business Account</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></li>
+</ul>
+<h4>By fax</h4>
+<ul>
+<li><span class="nowrap">1-866-388-7371</span> from Canada or the United States.</li>
+<li><span class="nowrap">1-819-536-0701</span> from outside Canada and the United States.</li>
+</ul>
+<h4>By mail</h4>
+<p>CRA Service Feedback<br>
+National Intake Centre<br>
+4695 Shawinigan-Sud Boulevard<br>
+Shawinigan QC&nbsp; G9P 5H9<br>
+CANADA</p>
+ </details>
+		</div></div></div>
+</li>
+<li><h4>Contact the Office of the Taxpayers' Ombudsperson</h4>
+<p>If you are still not satisfied with how the CRA handled your service complaint, you can contact the <a href="http://www.oto-boc.gc.ca/menu-eng.html" target="_blank">Office of the Taxpayers' Ombudsperson</a>. Generally, the Office of the Taxpayers' Ombudsperson will not review a service complaint until the CRA has finished its review.</p>
+</li>
+</ol>
+	
+<!--<h3>Talk to us first</h3>
 	<p>You can try to resolve your concerns with the CRA employee you have been dealing with or call the telephone number provided in the CRA's correspondence. If you do not have the contact information, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Contact the Canada Revenue Agency</a>. If you still disagree with the way your concerns were addressed, you can ask to discuss the matter with the employee's supervisor. If you are still not satisfied, you can file a service complaint.</p>
 	
-<h3>File a service complaint using 1 of these methods</h3>
+<h3>File a service feedback using 1 of these methods</h3>
 <h3>Methods to use</h3>
 	<div class="col-md-9">
 	<div class="cnjnctn-type-or cnjnctn-xs">
@@ -154,7 +192,7 @@ CANADA</p>
 	
 	
 	
-	<!--<ul>
+	<ul>
 		<li>Online dynamic form</li>	
 		<li>Fillable PDF form RC193<br>
 			<details>
