--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -103,7 +103,7 @@
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
 	<h2 id="toc1">Feedback about service you received</h2>
 <p>You have several ways to provide feedback on service you received from the CRA:</p>
-	
+	<h3>Options to submit feedback</h3>
 	<ol class="lst-stps">
 <li><h4>Talk to us first</h4>
 <p>You can try to resolve your concerns with the CRA employee you have been dealing with or call the telephone number provided in the CRA's correspondence. If you do not have the contact information, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Contact the Canada Revenue Agency</a>. If you still disagree with the way your concerns were addressed, you can ask to discuss the matter with the employee's supervisor. If you are still not satisfied, you can file a service complaint.</p>
