--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -26,6 +26,12 @@
 			   <link rel="stylesheet" href="css/step-list.css"/>
 			   <link rel="stylesheet" href="css/vertical-table.css"/>
 			     <link href="https://wet-boew.github.io/GCWeb/m%C3%A9li-m%C3%A9lo/2021-05-conjunction/and-or.css" rel="stylesheet"><!-- new css file-->
+
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
+<link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/theme.min.css"/>
+<link href="/etc/designs/canada/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon"/>
+<noscript><link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/noscript.min.css"/></noscript>
 		   </head>
 		   <body vocab="http://schema.org/" typeof="WebPage" class="cnt-wdth-lmtd">
 <div id="def-top"> </div>
