--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -146,7 +146,9 @@ National Intake Centre<br>
 Shawinigan QC&nbsp; G9P 5H9<br>
 CANADA</p>
  </details>
+	
 		</div></div></div>
+	<div class="clear"></div>
 </li>
 <li><h4>Contact the Office of the Taxpayers' Ombudsperson</h4>
 <p>If you are still not satisfied with how the CRA handled your service complaint, you can contact the <a href="http://www.oto-boc.gc.ca/menu-eng.html" target="_blank">Office of the Taxpayers' Ombudsperson</a>. Generally, the Office of the Taxpayers' Ombudsperson will not review a service complaint until the CRA has finished its review.</p>
