--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -116,7 +116,7 @@
 <p>You can try to resolve your concerns with the CRA employee you have been dealing with or call the telephone number provided in the CRA's correspondence. If you do not have the contact information, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Contact the Canada Revenue Agency</a>. If you still disagree with the way your concerns were addressed, you can ask to discuss the matter with the employee's supervisor. If you are still not satisfied, you can file a service complaint.</p>
 </li>
 <li><h4>File a service feedback using 1 of these methods</h4>
-<div class="col-md-9">
+
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Online form <span class="wb-inv">: Option 1 of 2</span></h4>
@@ -147,9 +147,9 @@ Shawinigan QC&nbsp; G9P 5H9<br>
 CANADA</p>
  </details>
 	
-		</div></div></div>
-	<div class="clear"></div>
-</li>
+		</div></div>
+	
+</li><div class="clear"></div>
 <li><h4>Contact the Office of the Taxpayers' Ombudsperson</h4>
 <p>If you are still not satisfied with how the CRA handled your service complaint, you can contact the <a href="http://www.oto-boc.gc.ca/menu-eng.html" target="_blank">Office of the Taxpayers' Ombudsperson</a>. Generally, the Office of the Taxpayers' Ombudsperson will not review a service complaint until the CRA has finished its review.</p>
 </li>
