--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -112,10 +112,10 @@
 	<h3>Options to submit feedback</h3>
 	<p>You have 3 ways to provide feedback on service you received from the CRA:</p>
 	<ol class="lst-stps">
-<li><h4>Talk to us first</h4>
-<p>You can try to resolve your concerns with the CRA employee you have been dealing with or call the telephone number provided in the CRA's correspondence. If you do not have the contact information, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Contact the Canada Revenue Agency</a>. If you still disagree with the way your concerns were addressed, you can ask to discuss the matter with the employee's supervisor. If you are still not satisfied, you can file a service complaint.</p>
+<li><h4>Call the CRA</h4>
+<p>Try to resolve your concerns with the CRA employee you have been dealing with or call the telephone number provided in the CRA's correspondence. If no number is provided, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">call the CRA</a>. If this does not address your concerns, use 1 of the other options. </p>
 </li>
-<li><h4>File a service feedback using 1 of these methods</h4>
+<li><h4>File with 1 of the service feedback forms</h4>
 
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
