--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -120,7 +120,7 @@
 	</ul>
 	<p>If no number is provided, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a>. If this does not address your concerns, use 1 of the other options. </p>
 </li>
-<li><h4>File with 1 of the service feedback forms</h4>
+<li><h4>File service feedback using 1 of these forms</h4>
 
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
