--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -113,10 +113,10 @@
 	<p>You have 3 ways to provide feedback on service you received from the CRA:</p>
 	<ol class="lst-stps">
 <li><h4>Call the CRA</h4>
-	<p>First try to resolve your concerns by calling: </p>
+	<p>First try to resolve your concerns by calling the: </p>
 	<ul>
-		<li>the CRA employee you have been dealing with</li>
-		<li>call the telephone number provided in the CRA's correspondence</li>
+		<li>CRA employee you have been dealing with</li>
+		<li>Telephone number provided in the CRA's correspondence</li>
 	</ul>
 	<p>If no number is provided, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a>. If this does not address your concerns, use 1 of the other options. </p>
 </li>
