--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -116,7 +116,7 @@
 	<p>First try to resolve your concerns by calling the: </p>
 	<ul>
 		<li>CRA employee you have been dealing with</li>
-		<li>Telephone number provided in the CRA's correspondence</li>
+		<li>Telephone number provided in your CRA correspondence</li>
 	</ul>
 	<p>If no number is provided, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a>. If this does not address your concerns, use 1 of the other options. </p>
 </li>
