--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -100,7 +100,7 @@
 			 
 	<li><span class="fas fa-check text-success fa-li"></span>is a resident of Canada throughout the year</li>
 		 </ul>
-		 <p>Your spouse or common-law partner <strong>is not an eligible spouse for the CWB purposes</strong>, if they:
+		 <p>Your spouse or common-law partner <strong>is not an eligible spouse for the CWB purposes</strong> if they:
 			 
 		  <ul class="fa-ul">
 <li><span class="fas fa-times text-danger fa-li"></span>are enrolled as a full-time student at a designated educational institution for more than 13 weeks in the year unless, on December 31, they have an eligible dependant</li>
