--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -109,7 +109,7 @@
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
 	<h2 id="toc1">Feedback about service you received</h2>
 
-	<h3>Options to submit feedback</h3>
+	<h3>Options to submit service feedback</h3>
 	<p>You have 3 ways to provide service feedback to the CRA:</p>
 	<ol class="lst-stps">
 <li><h4>Call the CRA</h4>
