--- a/subway/acwb/claim.html
+++ b/subway/acwb/claim.html
@@ -80,7 +80,7 @@
             <ul>
 	
             
-               <li>do you taxes electronically and follow the instructions in your <a href="/en/revenue-agency/services/e-services/e-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a></li>
+               <li>do your taxes electronically and follow the instructions in your <a href="/en/revenue-agency/services/e-services/e-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a></li>
                <li>fill out and submit <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s6.html">Schedule 6, Canada workers benefit</a>, Canada worker benefit, if you are filling a paper return</li>
             </ul>
             
