--- a/subway/acwb/claim.html
+++ b/subway/acwb/claim.html
@@ -86,8 +86,8 @@
             
             <p>Claiming the disability supplement:
            <ul>
-<li>If you have an eligible spouse and one of you is eligible for the disability tax credit, that person should claim both the basic amount and the disability supplement</li>
-	<li>If you have an eligible spouse and both of you are eligible for the disability tax credit, only one of you can claim the basic amount. However, each of you must claim the disability supplement on a separate Schedule 6.</li>
+		   <li>If you have an eligible spouse and <strong>one of you</strong> is eligible for the disability tax credit, that person should claim both the basic amount and the disability supplement</li>
+		   <li>If you have an eligible spouse and <strong>both of you</strong> are eligible for the disability tax credit, only one of you can claim the basic amount. However, each of you must claim the disability supplement on a separate Schedule 6.</li>
 		 </ul>
                
 		
