--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -376,7 +376,7 @@
            </details>
            </li>
 				<li class="box-num">  	
- <details><summary>Box 016 – Pension or superannuation</summary>
+ <details><summary>Box 016 – Pension or superannuation <span class="label label-warning">In progress</span></summary>
           <p id="bx016">Report the amount for the taxable portion of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or registered pension fund or plan, including disability benefits paid&nbsp;as a life annuity.</p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/pension-superannuation.html">Pension or superannuation</a></p>         
@@ -402,7 +402,7 @@
                     </details>
            </li>
 				<li class="box-num">  	
- <details><summary>Box 018 – Lump-sum payments</summary>
+ <details><summary>Box 018 – Lump-sum payments <span class="label label-warning">In progress</span></summary>
      <p id="bx018">Report the amount for the taxable portion of a <strong>single payment</strong> out of a:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -422,21 +422,37 @@
 </ul>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/lump-payments.html">Lump-sum payments</a></p>         
 
-<p><strong>Special situations:</strong></p>
+ <h4>Special situations</h4>
+<dl class="dl-horizontal">
+<dt>DPSP payments</dt>
+<dd>Report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan to a person described in paragraph&nbsp;147(2)(k.2) of the&nbsp;ITA for:<ul>
+<li>Employer contributions made to the plan after December 1, 1982</li>
+<li>Amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
+</ul>
+<p><strong>Do not</strong> report the amount of the payment if you allocated an amount (under 147(10.3) of the ITA) in a previous year and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
+</dd>
+<dt>Non-registered plan</dt>
+<dd></dd>
+<dt>Direct transfers</dt>
+<dd></dd>
+<dt>Amounts not eligible for transfer</dt>
+<dd></dd>
+<dt>Lump-sum payments – Non-resident</dt>
+<dd></dd>
+<dt>Lump-sum payments that you cannot transfer, that are not reported elsewhere</dt>
+<dd></dd>
+<dt>Lump-sum payments - Indian (exempt income)</dt>
+<dd></dd>
+
+</dl>
+
 <ul>
 <li><strong>Non-registered plan</strong> – You have to identify pension benefits you paid from a pension fund or plan that is not registered.&nbsp;Report the amount in box&nbsp;<strong>018</strong>. Also, in &quot;Other information&quot;, enter code&nbsp;<strong>190</strong> and the amount of the payment</li>
 <li>If you include <strong>lump-sum payments</strong> out of <abbr title="registered pension plan">RPP</abbr>s and DPSPs accrued to December&nbsp;31,&nbsp;1971, report the amount in box&nbsp;<strong>018</strong>, in &quot;Other information, enter code&nbsp;<strong>110</strong> and the amount of the payment</li>
 <li><strong>Direct transfers </strong>– Do not include direct transfers of RPP lump-sum payments to <abbr title="registered retirement savings plan">RRSP</abbr>s, <abbr title="simplified pension plan">SPP</abbr>s, <abbr title="pooled registered pension plan">PRPP</abbr>s, <abbr title="registered retirement income fund">RRIF</abbr>s, or other RPPs that are transferred according to subsections&nbsp;147.3(1) to (8) of the Income Tax Act (ITA). Similarly, do not report direct transfers of DPSP <span class="nowrap">lump-sum</span> payments to&nbsp;RRSPs, SPPs, PRPPs, RRIFs, or other DPSPs that are transferred according to subsection&nbsp;147(19) of the ITA. These amounts are not reported when they are directly transferred under these subsections, and the receiving carrier should not issue receipts. You can use <a href="/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151, Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>, to document these direct transfers</li>
 <li><strong>Amounts not eligible for transfer</strong> – Amounts transferred that are&nbsp;greater than the amounts allowed under subsections&nbsp;147.3(1) to (8) or 147(19) of the&nbsp;ITA are considered income in the year they are transferred. Report such amounts in box&nbsp;<strong>018</strong>. The receiving carrier should issue a receipt for these excess transfers<br>
 If you paid a single amount out of an RPP or a DPSP to an individual or you transferred such an amount that we consider to be income, you must report this amount in Other information, using code&nbsp;<strong>108</strong> for an RPP and code <strong>180</strong> for a DPSP</li>
-<li><strong>Deferred profit-sharing plan (DPSP)</strong> – Use box&nbsp;<strong>018</strong> to report the total of amounts you allocated or reallocated in the year under a DPSP or a revoked plan to a person described in paragraph&nbsp;147(2)(k.2) of the&nbsp;ITA for:<ul>
-<li>employer contributions made to the plan after December 1, 1982</li>
-<li>amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
-</ul>
-</li>
-</ul>
-<p>If you allocated an amount under subsection&nbsp;147(10.3) of the&nbsp;ITA in a previous year and you made the payment in the current year, you have to report the amount of the payment. In Other information, enter code&nbsp;<strong>180</strong> and the amount of the payment.</p>
-<ul>
+
 <li><strong>Lump-sum payments </strong>–<strong> non-resident</strong> – You may have paid superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada. If you paid the benefits in a <span class="nowrap">lump-sum,</span> report the amount in box&nbsp;<strong>018</strong>. The recipient may be able to transfer the amount to an RPP, SPP, PRPP or RRSP and deduct the amount of the transfer under paragraph&nbsp;60(j) if the conditions in that provision are satisfied. However, if you made such a direct transfer, report the amount in box&nbsp;<strong>018</strong>, and in Other information, enter code&nbsp;<strong>102</strong> and the amount of the transfer</li>
 <li>If you made payments out of an EBP that are not payments of superannuation or pension benefits, these should be reported on a T4 slip. Learn more: <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></li>
 <li><strong>Lump-sum payments that you cannot transfer, that are not reported elsewhere</strong> – If you paid an amount that does not come from an RPP or a DPSP that is not eligible for transfer and that is not required to be reported elsewhere, report the amount in box&nbsp;<strong>018</strong> and in Other information, enter code&nbsp;<strong>158</strong> and the amount of the payment</li>
@@ -453,7 +469,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
           </li>
 				<li class="box-num">  	 
                          
-     <details>    <summary>Box 024 – Annuities</summary>
+     <details>    <summary>Box 024 – Annuities <span class="label label-warning">In progress</span></summary>
          <p id="bx024">Report payments from an annuity that an individual bought with a refund of premiums from a deceased annuitant's RRSP.</p>
 <p>Report annuity payments from a life annuity purchased from the proceeds of a life income fund or from the proceeds of a registered retirement income fund.</p>
 <p>Report only annuity payments from an Advanced life deferred annuity in box <strong>024</strong>, see ALDA purchases in code&nbsp;037</p>
@@ -664,8 +680,8 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments</summary> 
-  <p id="cd115">Report instalment or annuity payments you made under DPSP using code 115 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
+ <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd115">Report instalment or annuity payments you made under a DPSP using code 115 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
  </details> 
 </li>
 <li class="code-num">
@@ -713,8 +729,8 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 123 – Payments from a revoked DPSP</summary> 
-  <p id="cd123">Report any payments made from a revoked <abbr title="deferred profit-sharing plan">DPSP</abbr>.</p> 
+ <details>  <summary>Code 123 – Payments from a revoked DPSP <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd123">Report payments you made from a revoked <abbr title="deferred profit-sharing plan">DPSP</abbr>.</p> 
  </details> 
 </li>
 <li class="code-num">
@@ -850,8 +866,10 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer</summary> 
-  <p  id="cd180">Learn more: Deferred profit-sharing plan (DPSP) and Amounts not eligible for transfer, under “Special situations” in box 018 - Lump-sum payments.</p> 
+ <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
+ <p id="cd180">Report the amount of the payment if you allocated an amount (under 147(10.3) of the ITA) in a previous year and you made the payment in the current year.</p>
+
+<p><strong>Do not</strong> report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan to a person described in paragraph&nbsp;147(2)(k.2) of the&nbsp;ITA using code 180, use <a href="#bx018">box 018</a>. </p>
  </details> 
  </li>
 <li class="code-num">
