--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -23,7 +23,7 @@
 			    <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css"/>
    <link rel="stylesheet" href="css/stacked-header.css"/>
 			   <link rel="stylesheet" href="css/and-or.css"/>
-			   <link rel="stylesheet" href="https://test.canada.ca/covid-19-guidance/proto/css/step-list.css"/>
+			   <link rel="stylesheet" href="/css/step-list.css"/>
 			   <link rel="stylesheet" href="css/vertical-table.css"/>
 			     <link href="https://wet-boew.github.io/GCWeb/m%C3%A9li-m%C3%A9lo/2021-05-conjunction/and-or.css" rel="stylesheet"><!-- new css file-->
 
