--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -110,7 +110,7 @@
 	<h2 id="toc1">Feedback about service you received</h2>
 
 	<h3>Options to submit service feedback</h3>
-	<p>You have 3 ways to provide service feedback to the CRA:</p>
+	<p>Steps to provide service feedback to the CRA:</p>
 	<ol class="lst-stps">
 <li><h4>Call the CRA</h4>
 	<p>First try to resolve your concerns by calling the: </p>
