--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -118,10 +118,10 @@
 		<li>CRA employee you have been dealing with</li>
 		<li>Telephone number provided in your CRA correspondence</li>
 	</ul>
-	<p>If no number is provided, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a>. If this does not address your concerns, use 1 of the other options. </p>
+	<p>If no number is provided, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a>. </p>
 </li>
-<li><h4>File service feedback using 1 of these forms</h4>
-
+<li><h4>File a service feedback form</h4>
+<p>If calling did not address your concern, complete 1 of these service feedback forms: </p>
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Online form <span class="wb-inv">: Option 1 of 2</span></h4>
