--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -381,7 +381,23 @@
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/pension-superannuation.html">Pension or superannuation</a></p>         
 
-<p><strong>Special situations:</strong></p>
+ <h4>Special situations</h4>
+<dl class="dl-horizontal">
+<dt>Unregistered pension plan</dt>
+<dd></dd>
+<dt>Employee benefit plan </dt>
+<dd></dd>
+<dt>Retirement compensation arrangement</dt>
+<dd></dd>
+<dt>Indian (exempt income)</dt>
+<dd></dd>
+<dt>Disability benefits</dt>
+<dd></dd>
+<dt>Veterans' benefits</dt>
+<dd></dd>
+
+</dl>
+
 <ul>
 <li>You may have paid superannuation or pension benefits to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong>. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP)</li>
 <li>Do not include benefits from an <strong>unregistered pension plan</strong> in box <strong>016</strong>. Instead, include them in the &quot;Other information&quot; area using code 109</li>
