--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -117,7 +117,7 @@
 		 
 		 <h2 id="h-4">How to calculate the ACWB payment amount</h2>
             <p>The Advanced Canada workers benefit (ACWB) will always be equal to 50% of your CWB that was calculated on your income tax and benefit return.</p>
-<p>You can estimate your ACWB payments by using the child and family benefit calculator. Note: you must enter the information based on your situation as of December 31 provided on your income tax and benefit return.</p>
+<p>You can estimate your ACWB payments by using the <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/child-family-benefits-calculator.html">child and family benefit calculator</a>. Note: you must enter the information based on your situation as of December 31 provided on your income tax and benefit return.</p>
 		 <p>A change in the eligibility which occurs during a quarter will not impact the ACWB payment amount for the current quarter.</p>
 		
 		 		 <h2 id="h-5">How the CRA will determine the recipient for married or common-law spouses</h2>
