--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -441,7 +441,8 @@
  <h4>Special situations</h4>
 <dl class="dl-horizontal">
 <dt>DPSP payments</dt>
-<dd>Report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan to a person described in paragraph&nbsp;147(2)(k.2) of the&nbsp;ITA for:<ul>
+<dd><p>Report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan to a person described in paragraph&nbsp;147(2)(k.2) of the&nbsp;ITA for:</p>
+<ul>
 <li>Employer contributions made to the plan after December 1, 1982</li>
 <li>Amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
 </ul>
