--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -121,7 +121,7 @@
 		 <p>A change in the eligibility which occurs during a quarter will not impact the ACWB payment amount for the current quarter.</p>
 		
 		 		 <h2 id="h-5">How the CRA will determine the recipient for married or common-law spouses</h2>
-		 <p>Only one spouse will receive the ACWB.</p>
+		 <p>Only one spouse will receive the ACWB payment.</p>
 
 		 
 		 <h3>When neither spouse is entitled to a disability supplement</h3>
