--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -93,7 +93,7 @@
 		   <li><span class="fas fa-times text-danger fa-li"></span>do not have to pay tax in Canada because you are an officer or servant of another country, such as a diplomat, or you are a family member or employee of that person</li>
 		 </ul>
                
-		 <h3>Who an eligible spouse is</h3>
+		 <h3 id="h-1-1">Who an eligible spouse is</h3>
 		 <p>For CWB purposes, an eligible spouse:</p>
 		  <ul class="fa-ul">
 	<li><span class="fas fa-check text-success fa-li"></span>lives with you as your spouse or common-law partner on December 31</li>
@@ -107,7 +107,7 @@
 	<li><span class="fas fa-times text-danger fa-li"></span>are confined to a prison or similar institution for a period of at least 90 days during the year</li>
 			  <li><span class="fas fa-times text-danger fa-li"></span>do not have to pay tax in Canada because they are an officer or servant of another country, such as a diplomat, or are a family member or employee of such a person</li>
 		 </ul>
-		 <h3>Who an eligible dependant is</h3>
+		 <h3 id-"h-1-2">Who an eligible dependant is</h3>
 		 <p>For CWB purposes, an eligible dependant:
 			<ul class="fa-ul">
 	<li><span class="fas fa-check text-success fa-li"></span>is your or your spouse's or common-law partner's child</li>
