--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -436,17 +436,16 @@
  <li class="cnjnctn-col">Reimbursement of any over-contributions to the plan</li>
 </ul></li>
 </ul>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/lump-payments.html">Lump-sum payments</a></p>         
 
  <h4>Special situations</h4>
 <dl class="dl-horizontal">
 <dt>DPSP payments</dt>
-<dd><p>Report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan to a person described in paragraph&nbsp;147(2)(k.2) of the&nbsp;ITA for:</p>
+<dd><p>Report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan to a person for:</p>
 <ul>
 <li>Employer contributions made to the plan after December 1, 1982</li>
 <li>Amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
 </ul>
-<p><strong>Do not</strong> report the amount of the payment if you allocated an amount (under 147(10.3) of the ITA) in a previous year and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
+<p><strong>Do not</strong> report the amount of the payment if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
 </dd>
 <dt>Non-registered plan</dt>
 <dd></dd>
@@ -460,9 +459,9 @@
 <dd></dd>
 <dt>Lump-sum payments - Indian (exempt income)</dt>
 <dd></dd>
-
 </dl>
 
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/lump-payments.html">Lump-sum payments</a></p>     
 <ul>
 <li><strong>Non-registered plan</strong> – You have to identify pension benefits you paid from a pension fund or plan that is not registered.&nbsp;Report the amount in box&nbsp;<strong>018</strong>. Also, in &quot;Other information&quot;, enter code&nbsp;<strong>190</strong> and the amount of the payment</li>
 <li>If you include <strong>lump-sum payments</strong> out of <abbr title="registered pension plan">RPP</abbr>s and DPSPs accrued to December&nbsp;31,&nbsp;1971, report the amount in box&nbsp;<strong>018</strong>, in &quot;Other information, enter code&nbsp;<strong>110</strong> and the amount of the payment</li>
@@ -884,9 +883,9 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </li>
 <li class="code-num">
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
- <p id="cd180">Report the amount of the payment if you allocated an amount (under 147(10.3) of the ITA) in a previous year and you made the payment in the current year.</p>
+ <p id="cd180">Report the amount of the payment if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
 
-<p><strong>Do not</strong> report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan to a person described in paragraph&nbsp;147(2)(k.2) of the&nbsp;ITA using code 180, use <a href="#bx018">box 018</a>. </p>
+<p><strong>Do not</strong> report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
  </details> 
  </li>
 <li class="code-num">
