--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -107,11 +107,11 @@
             <h2 id="h-3">How the CRA calculates your CWB payment amount</h2>
             <p>The Canada Revenue Agency (CRA) uses all of the following information to calculate your CWB:</p>
 		 <ul>
-			 <li>marital status - <a href="eligible.html#whoaneligiblespouseis">eligible spouse</a></li>
+			 <li>marital status - <a href="eligible.html#h-1-1">eligible spouse</a></li>
 			 <li>province or territory of residence</li>
 			 <li>earned working income</li>
 			 <li>adjusted family net income</li>
-			 <li><a href="eligible.html#whoaneligibledependant is">eligible dependant</a></li>
+			 <li><a href="eligible.html#h-1-2">eligible dependant</a></li>
 			 <li>eligibility for the disability tax credit</li>
 		 </ul>
 		 
