--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -112,7 +112,7 @@
 	<h3>Options to submit service feedback</h3>
 	<p>Steps to provide service feedback to the CRA:</p>
 	<ol class="lst-stps">
-<li><h4>Call the CRA</h4>
+<li><h4>Contact the CRA</h4>
 	<p>First try to resolve your concerns by calling the: </p>
 	<ul>
 		<li>CRA employee you have been dealing with</li>
