--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -121,7 +121,7 @@
 	<p>If no number is provided, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">contact the CRA</a>. </p>
 </li>
 <li><h4>File a service feedback form</h4>
-<p>If calling did not address your concern, complete 1 of these service feedback forms: </p>
+<p>If calling did not address your concern, use 1 of these methods to submit a service feedback form: </p>
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Online form <span class="wb-inv">: Option 1 of 2</span></h4>
