--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -80,14 +80,20 @@
 
 <h2 id="toc0">Types of feedback</h2>
 <p>There are 3 types of feedback you can give the CRA.</p>
+	<ul class="fa-ul colcount-sm-2 small">
+                                    <li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Compliment - Submit a positive experience you had with the CRA</li>
+                                    <li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Suggestion - Give your idea on how to improve the CRA</li>
+                                    <li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Complaint - Tell us about a problem you had with the CRA</li>
+                                    
+                                </ul>
 	
-	<dl class="dl-horizontal">
+	<!--<dl class="dl-horizontal">
 <dt class="h3 mrgn-tp-0">Compliment</dt> <dd><p>Submit a positive experience you had with the CRA</p>
 </dd> <dt class="h3 mrgn-tp-0">Suggestion</dt> <dd><p>Give your idea on how to improve the CRA</p>
 </dd> <dt class="h3 mrgn-tp-0">Complaint</dt> <dd><p>Tell us about a problem you had with the CRA</p>
 </dd></dl>
 	
-	<!--<div class="cnjnctn-type-or">
+	<div class="cnjnctn-type-or">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Compliment<span class="wb-inv">: Option 1 of X</span></h4>
 <p>Submit a positive experience with the CRA</p>
